--- a/package.json
+++ b/package.json
@@ -25,5 +25,14 @@
     "repository": {
         "type": "git",
         "url": "git://github.com/remobile/react-native-toast.git"
+    },
+    "devDependencies": {
+        "babel-eslint": "^7.2.3",
+        "eslint": "^3.19.0",
+        "eslint-config-airbnb": "^15.1.0",
+        "eslint-plugin-flowtype": "^2.35.1",
+        "eslint-plugin-import": "^2.7.0",
+        "eslint-plugin-jsx-a11y": "^5.1.1",
+        "eslint-plugin-react": "^7.3.0"
     }
 }
